# pytest-fastest

./: .env  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  appveyor.yml  justfile  pyproject.toml  pytest_fastest.py  setup.py  tox.ini
docs/: conf.py  index.rst
pytest_fastest/: __init__.py  git.py
tests/: conftest.py  test_fastest.py  test_git.py  test_init.py
