[tool.poetry]
name = "pytest-fastest"
version = "0.0.10"
description = "Use SCM and coverage to run only needed tests"
authors = ["Kirk Strauser <kirk@amino.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/kstrauser/pytest-fastest"
repository = "https://github.com/kstrauser/pytest-fastest"
documentation = "http://pytest-fastest.readthedocs.io/en/latest/"
classifiers=[
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.5"
pytest = ">=4.4"

[tool.poetry.dev-dependencies]
pytest-mock = ">=1.10"
sphinx = "^2"

[tool.poetry.plugins."pytest11"]
fastest = "pytest_fastest"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
